5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1630_2924.log
== TEST (2019-04-02 17:07:18) 
-- CODE:
int(input("a posicao inicial do movel(metros)"))
int(input("a velocidade do movel"))
int(input("o intervalo de tempo"))

total (60 seg = 1 min)
-- ERROR:
File "XXXX", line 5
    total (60 seg = 1 min)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:08:38) 
-- CODE:
int(input("a posicao inicial do movel(metros)"))
int(input("a velocidade do movel"))
int(input("o intervalo de tempo"))

int (60 seg = 1 min )
-- ERROR:
File "XXXX", line 5
    int (60 seg = 1 min )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:06) 
-- CODE:
int(input("a posicao inicial do movel(metros)"))
int(input("a velocidade do movel"))
int(input("o intervalo de tempo"))

int (10 seg = 20)
-- ERROR:
File "XXXX", line 5
    int (10 seg = 20)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:16) 
-- CODE:
int(input("a posicao inicial do movel(metros)"))
int(input("a velocidade do movel"))
int(input("o intervalo de tempo"))

int (10 seg = 20 min)
-- ERROR:
File "XXXX", line 5
    int (10 seg = 20 min)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:15:12) 
-- CODE:
var=int(input("a posicao inicial do movel(metros)"))
var=int(input("a velocidade do movel"))
var=int(input("o intervalo de tempo"))

int ()
-- ERROR:
File "XXXX", line 5
    int (10 seg = 20 min)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:15:31) 
-- CODE:
var=int(input("a posicao inicial do movel(metros)"))
var=int(input("a velocidade do movel"))
var=int(input("o intervalo de tempo"))

int ()
-- EXECUTION TIME:
0.153738
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:

-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:

-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:17:09) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

-- ERROR:
File "XXXX", line 5
    int (10 seg = 20 min)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:18:47) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (var=1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int (var=1)
TypeError: 'var' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:20:21) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (posicao final)
-- ERROR:
File "XXXX", line 5
    int (posicao final)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:21:18) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
-- ERROR:
File "XXXX", line 5
    int (posicao final)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:26:27) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int ()
-- ERROR:
File "XXXX", line 5
    int (posicao final)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:27:33) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

posicao final (int)
-- ERROR:
File "XXXX", line 5
    posicao final (int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:27:43) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
(int)
-- ERROR:
File "XXXX", line 5
    posicao final (int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:29:16) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int(input("posicao final"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:29:34) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int(input("posicao final"))
-- EXECUTION TIME:
0.135065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 5, in <module>
    int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:29:53) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int(input(200)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:32:31) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (10*20)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:33:52) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (200)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:34:41) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (var*var2*var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int (var*var2*var3)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:05) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (va1r*var2*var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int (va1r*var2*var3)
NameError: name 'va1r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:15) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (var1*var2*var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int (va1r*var2*var3)
NameError: name 'va1r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:44) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int (input) float("posicao final")
-- ERROR:
File "XXXX", line 5
    int (input) float("posicao final")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:54) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))

int(input)float("posicao final")
-- ERROR:
File "XXXX", line 5
    int(input)float("posicao final")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:58) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de (input)float("posicao final")
-- ERROR:
File "XXXX", line 3
    var3=int(input("o intervalo de (input)float("posicao final")
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:37:43) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
					
(input)float("posicao final")
-- ERROR:
File "XXXX", line 5
    (input)float("posicao final")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:26) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
total ("posicao final")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ("posicao final")
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:49) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
total=("posicao final")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ("posicao final")
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:40:51) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
float (posicao final)
-- ERROR:
File "XXXX", line 5
    float (posicao final)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:43:30) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
print (posicao final)
-- ERROR:
File "XXXX", line 5
    print (posicao final)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:09) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
print posicao final (int)
-- ERROR:
File "XXXX", line 5
    print posicao final (int)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:44) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2var3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = var1 + var2var3
NameError: name 'var2var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:20) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2var3
print ( S = var+ var2var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = var1 + var2var3
NameError: name 'var2var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:43) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print ( S = var+ var2 var3)
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:28) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print ( S = var1 + var2 var3)
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:41) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print ( S = var1 + var2 var3 )
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:51) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:10) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print (S)
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:16) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3
print ( S )
-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:26) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S = var1 + var2 var3

-- ERROR:
File "XXXX", line 5
    S = var1 + var2 var3
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:44) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S=var1+var2var3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S=var1+var2var3
NameError: name 'var2var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:10) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S=var1+var2+var3

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S=var1+var2var3
NameError: name 'var2var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:28) 
-- CODE:
var1=int(input("a posicao inicial do movel(metros)"))
var2=int(input("a velocidade do movel"))
var3=int(input("o intervalo de tempo"))
			
S=var1+var2 var3

-- ERROR:
File "XXXX", line 5
    S=var1+var2 var3
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
